# us-election-prediction

./: LICENSE  README.md  pyproject.toml
src/data/: fetch-irs-data.ipynb  ingestion.py  polymarket_midterms.ipynb  schema.py
src/evaluate/: metrics.py
src/features/: engineering.py
src/interpret/: explainability.py
src/model/: hierarchical.py
tests/: conftest.py  test_data.py  test_evaluate.py  test_model.py
